# gotd

./: compose.yml  google_token.json  gotd_token.json  gotd_token_invalid.json  justfile  todo.md  todo.norg
caddy/: Caddyfile  Dockerfile
client/: Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
client/src/: App.tsx  util.ts
client/src/auth/: auth.tsx
client/src/common/: topBar.tsx
client/src/leaderboard/: leaderboard.tsx
client/src/squareword/: dictionary.ts  squareword.tsx  state.ts
client/src/sudoku/: state.ts  sudoku.tsx
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/: App.tsx  util.ts
frontend/src/auth/: auth.tsx
frontend/src/squareword/: squareword.tsx
frontend/src/sudoku/: sudoku.tsx
migrations/: 20230905190836_initial.down.sql  20230905190836_initial.up.sql  20231002151205_add_winner_column_to_state_tables.down.sql  20231002151205_add_winner_column_to_state_tables.up.sql  20231005190855_add_timestamp_column_to_state_tables.down.sql  20231005190855_add_timestamp_column_to_state_tables.up.sql  V1__initial.sql
server/: Cargo.toml  Dockerfile  db-certificate.crt  package.json  pnpm-lock.yaml
server/src/: main.rs  migrations.rs  squarewordgen.rs  sudokugen.rs
server/templates/: hello.html
