[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.0"

axum = "0.6.20"
barrel = { version = "0.7.0", features = ["pg"] }
openssl = "0.10.56"
postgres-openssl = "0.5.0"
refinery = { version = "0.8.10", features = ["tokio-postgres"] }
serde = { version = "1.0.183", features = ["derive"] }
sqlx = { version = "0.7.1", features = [
    "runtime-tokio-rustls",
    "any",
    "postgres",
] }
tokio = "1.30.0"
tokio-postgres = "0.7.8"
tower = "0.4.13"
tower-http = { version = "0.4.3", features = ["fs"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
