[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
openssl = "0.10.56"
postgres-openssl = "0.5.0"
rand = "0.8.5"
refinery = { version = "0.8.10", features = ["tokio-postgres"] }
serde = { version = "1.0.183", features = ["derive"] }
sqlx = { version = "0.7.1", features = [
    "runtime-tokio-rustls",
    "any",
    "postgres",
] }
tokio = "1.30.0"
tokio-postgres = "0.7.8"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
